--- a/app/locales/es-ES/common.json
+++ b/app/locales/es-ES/common.json
@@ -7,6 +7,6 @@
   "footer": {
     "privacyNotice": "Política de Privacidad",
     "accessibility": "Declaración de Accesibilidad",
-    "gdprRequests": "Solicitudes RGPD"
+    "gdprRequests": "Solicitudes GDPR"
   }
 }
