--- a/app/locales/en-UK/common.json
+++ b/app/locales/en-UK/common.json
@@ -2,7 +2,8 @@
   "header": {
     "contactSales": "Contact Sales",
     "openPlatform": "Open Platform",
-    "languageSelector": "Select Language"
+    "languageSelector": "Select Language",
+    "pricing": "Pricing"
   },
   "footer": {
     "privacyNotice": "Privacy Notice",
