--- a/app/locales/en-UK/common.json
+++ b/app/locales/en-UK/common.json
@@ -11,7 +11,7 @@
         "services": [
           "Anamnesis Calls",
           "8am Rush",
-          "Quality of Outcomes Framework (QOF)",
+          "Quality Outcomes Framework (QOF)",
           "Patient Follow Up"
         ]
       },
